--- a/index.html
+++ b/index.html
@@ -100,34 +100,116 @@
   <table class="articles">
     <tr>
       <td style="width: 555px; height: 370px;" colspan="2">
-        <p>Cars</p>
-        <p class="tdtitle">The joy of replicas: A $ 5 million car for $ 50,000</p>
-        <p class="tdtext">The 31-year-old self-taught engineer and former amateur 
+        <p style="width: 228px;
+        height: 15px;
+        top: 35px;
+        left: 35px;
+        ">Cars</p>
+        <p style="width: 238px;
+        height: 90px;
+        top: 70px;
+        left: 35px;
+        font-size: 25px;
+        font-weight: 700;
+        line-height: 30px;
+        text-align: left;"
+        class="tdtitle">The joy of replicas: A $ 5 million car for $ 50,000</p>
+        <p class="tdtext" style="width: 228px;
+        height: 80px;
+        top: 185px;
+        left: 35px;
+        ">The 31-year-old self-taught engineer and former amateur 
           racer spends his days building artful recreations of one of most iconic sports cars</p>
         <img src="src/Car.png" class="car"/>
         <img src="src/girl.png" class="girl"/>
-        <p>Jessica Miller:</p>
+        <p style="width: 88px;
+        height: 20px;
+        top: 332px;
+        left: 75px;
+        font-family: Lato;
+        font-size: 14px;
+        line-height: 20px;
+        text-align: left;
+        color: #5D5FEF;">Jessica Miller:</p>
         <p class="tdtext">Even as the ride-hailing service’s future remem…</p>
         <img src="src/Comment.png" class="comment"/>
         <p class="tdminitext">342</p>
       </td>
       <td style="width: 263px; height: 370px;">
         <button>Popular</button>
-        <p>Art & Design</p>
-        <p>Invisible ink: the weird world of tattoo removal – in pictures</p>
+        <p style="width: 203px;
+        height: 15px;
+        top: 160px;
+        left: 25px;    
+        font-family: Lato;
+        font-size: 12px;
+        line-height: 15px;
+        letter-spacing: 0.5px;
+        text-align: left;
+        color: #E7D9FF;">Art & Design</p>
+        <p style="width: 203px;
+        height: 100px;
+        top: 185px;
+        left: 25px;
+        font-family: Roboto Slab;
+        font-size: 16px;
+        line-height: 25px;
+        letter-spacing: 0.5px;
+        text-align: left;
+        color: #FFFFFF;">Invisible ink: the weird world of tattoo removal – in pictures</p>
         <img src="src/girl.png" class="girl"/>
-        <p>By Sarah Jenkins</p>
-        <p>Sept 26</p>
+        <p style="width: 148px;
+        height: 20px;
+        top: 303px;
+        left: 80px;
+        opacity: 0.85;
+        font-family: Lato;
+        font-size: 14px;
+        line-height: 20px;
+        text-align: left;
+        color: #FFFFFF;">By Sarah Jenkins</p>
+        <p style="width: 41px;
+        height: 15px;
+        top: 325px;
+        left: 80px;
+        opacity: 0.4;
+        font-family: Lato;
+        font-size: 12px;
+        line-height: 15px;
+        text-align: left;
+        color: #FFFFFF;">Sept 26</p>
         <img src="src/Comment.png" class="comment"/>
-        <p>16</p>
+        <p style="width: 14px;
+        height: 15px;
+        top: 325px;
+        left: 151px;
+        opacity: 0.4;
+        font-family: Lato;
+        font-size: 12px;
+        line-height: 15px;
+        text-align: left;
+        color: #FFFFFF;">16</p>
         <img src="src/Heart.png" class="heart"/>
-        <p>832</p>
+        <p style="width: 21px;
+        height: 15px;
+        top: 325px;
+        left: 195px;
+        opacity: 0.4;
+        font-family: Lato;
+        font-size: 12px;
+        line-height: 15px;
+        text-align: left;
+        color: #FFFFFF;">832</p>
       </td>
     </tr>
     <tr>
       <td style="width: 263px; height: 370px;" rowspan="2">
         <img src="src/cat.png" class="cat"/>
-        <p class="tdtitle">200+ Doomed Cats Saved From Euthanization</p>
+        <p class="tdtitle" style="width: 213px;
+        height: 50px;
+        top: 290px;
+        left: 25px;
+        ">200+ Doomed Cats Saved From Euthanization</p>
       </td>
       <td style="width: 263px; height: 170px;">
         <p class="tdtitle">Is Coffee Bad for Bones?</p>
