--- a/index.html
+++ b/index.html
@@ -104,7 +104,12 @@
         height: 15px;
         top: 35px;
         left: 35px;
-        ">Cars</p>
+        font-family: Lato;
+        font-size: 12px;
+        line-height: 15px;
+        letter-spacing: 0.5px;
+        text-align: left;
+        color: #6E99AE;">Cars</p>
         <p style="width: 238px;
         height: 90px;
         top: 70px;
