--- a/index.html
+++ b/index.html
@@ -136,9 +136,16 @@
         line-height: 20px;
         text-align: left;
         color: #5D5FEF;">Jessica Miller:</p>
-        <p class="tdtext">Even as the ride-hailing service’s future remem…</p>
+        <p class="tdtext" style="
+        width: 296px;
+        height: 20px;
+        top: 332px;
+        left: 168px;">Even as the ride-hailing service’s future remem…</p>
         <img src="src/Comment.png" class="comment"/>
-        <p class="tdminitext">342</p>
+        <p class="tdminitext" style="width: 21px;
+        height: 15px;
+        top: 335px;
+        left: 499px;">342</p>
       </td>
       <td style="width: 263px; height: 370px;">
         <button>Popular</button>
