--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
         line-height: 15px;
         letter-spacing: 0.5px;
         text-align: left;
-        color: #6E99AE;">Cars</p>
+        color: #6E99AE;">CARS</p>
         <p style="width: 238px;
         height: 90px;
         top: 70px;
