--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@
         font-size: 12px;
         line-height: 15px;
         letter-spacing: 0.5px;
+        font-weight: bold;
         text-align: left;
         color: #6E99AE;">CARS</p>
         <p style="width: 238px;
@@ -147,8 +148,8 @@
         top: 335px;
         left: 499px;">342</p>
       </td>
-      <td style="width: 263px; height: 370px;">
-        <button>Popular</button>
+      <td style="width: 263px; height: 370px;" class="osobtd">
+        <button class="popular">Popular</button>
         <p style="width: 203px;
         height: 15px;
         top: 160px;
