--- a/index.html
+++ b/index.html
@@ -169,7 +169,10 @@
         letter-spacing: 0.5px;
         text-align: left;
         color: #FFFFFF;">Invisible ink: the weird world of tattoo removal – in pictures</p>
-        <img src="src/girl.png" class="girl"/>
+        <img src="src/girl.png" class="girl" style="width: 45px;
+        height: 45px;
+        top: 300px;
+        left: 25px;"/>
         <p style="width: 148px;
         height: 20px;
         top: 303px;
@@ -190,7 +193,10 @@
         line-height: 15px;
         text-align: left;
         color: #FFFFFF;">Sept 26</p>
-        <img src="src/Comment.png" class="comment"/>
+        <img src="src/Comment.png" class="comment" style="width: 15px;
+        height: 15px;
+        top: 325px;
+        left: 131px;"/>
         <p style="width: 14px;
         height: 15px;
         top: 325px;
