--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
           </tr>
           <tr>
               <td>
-                <p style="color:  #FFA34D">NFL</p>
+                <p style="position:relative;color:  #FFA34D">NFL</p>
                 <p>11 surprising stat rankings for active NFL players</p>
                 <img src="src/Play.png" class="play">
                 </td>
