--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
               </td>
           </tr>
           <tr>
-              <td>
-                <p style="position:relative;color:  #FFA34D">NFL</p>
+              <td style="position:relative;">
+                <p style="color:  #FFA34D">NFL</p>
                 <p>11 surprising stat rankings for active NFL players</p>
                 <img src="src/Play.png" class="play">
                 </td>
