--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
               <td style="position:relative; background-color: #F5F5F5;"><p style="color: #3BBDC4;">FOOD</p>
                 <p>For Chicken-Fried Steak, Too</p>     
                 <p>Much Is Just Enough </p>
-                <img src="src/Play.png" class="play" >
+                <img src="src/Play.png" class="play" style="left:157px">
               </td>
           </tr>
           <tr>
