--- a/index.html
+++ b/index.html
@@ -253,6 +253,33 @@
       </td>
     </tr>
   </table>
+  <ul class="blacklist">
+    <li><p>COLUMNS</p></li>
+    <li>
+      <img src="src/Quote.png" class="quote"/>
+      <p>Architecture is the thoughtful making of space</p>
+      <img src="src/boy.png" class="boy"/>
+      <p>David Williams</p>
+      <p>Architect</p>
+    </li>
+    <li>
+      <img src="src/Quote.png" class="quote"/>
+      <p>The details are not the details. They make the design.</p>
+      <img src="src/winter.png" class="winter"/>
+      <p>Alexandra Green</p>
+      <p>Interior designer</p>
+    </li>
+    <li>
+      <img src="src/Quote.png" class="quote"/>
+      <p>Live life to the fullest, and focus on the positive</p>
+      <img src="src/half.png" class="half"/>
+      <p>Olivia Thompson</p>
+      <p>Coacher</p>
+    </li>
+    <li>
+      <p>Read more</p>
+    </li>
+  </ul>
       </div>
   </body>
 </html>
