--- a/index.html
+++ b/index.html
@@ -254,30 +254,30 @@
     </tr>
   </table>
   <ul class="blacklist">
-    <li><p>COLUMNS</p></li>
+    <li><p class="text">COLUMNS</p></li>
     <li>
       <img src="src/Quote.png" class="quote"/>
-      <p>Architecture is the thoughtful making of space</p>
+      <p class="title">Architecture is the thoughtful making of space</p>
       <img src="src/boy.png" class="boy"/>
-      <p>David Williams</p>
-      <p>Architect</p>
+      <p class="text">David Williams</p>
+      <p class="text">Architect</p>
     </li>
     <li>
       <img src="src/Quote.png" class="quote"/>
-      <p>The details are not the details. They make the design.</p>
+      <p class="title">The details are not the details. They make the design.</p>
       <img src="src/winter.png" class="winter"/>
-      <p>Alexandra Green</p>
-      <p>Interior designer</p>
+      <p class="text">Alexandra Green</p>
+      <p class="text">Interior designer</p>
     </li>
     <li>
       <img src="src/Quote.png" class="quote"/>
-      <p>Live life to the fullest, and focus on the positive</p>
+      <p class="title">Live life to the fullest, and focus on the positive</p>
       <img src="src/half.png" class="half"/>
-      <p>Olivia Thompson</p>
-      <p>Coacher</p>
+      <p class="text">Olivia Thompson</p>
+      <p class="text">Coacher</p>
     </li>
     <li>
-      <p>Read more</p>
+      <p class="text">Read more</p>
     </li>
   </ul>
       </div>
