--- a/index.html
+++ b/index.html
@@ -254,30 +254,71 @@
     </tr>
   </table>
   <ul class="blacklist">
-    <li><p class="text">COLUMNS</p></li>
+    <li><p class="text" style="width: 213px;
+      height: 20px;
+      top: 20px;
+      left: 25px;
+      ">COLUMNS</p></li>
     <li>
       <img src="src/Quote.png" class="quote"/>
-      <p class="title">Architecture is the thoughtful making of space</p>
+      <p class="title" style="width: 203px;
+      height: 75px;
+      top: 105px;
+      left: 35px; ">Architecture is the thoughtful making of space</p>
       <img src="src/boy.png" class="boy"/>
-      <p class="text">David Williams</p>
-      <p class="text">Architect</p>
+      <p class="text" style="width: 138px;
+      height: 20px;
+      top: 199px;
+      left: 90px;
+      ">David Williams</p>
+      <p class="text" style="width: 138px;
+      height: 15px;
+      top: 221px;
+      left: 90px;
+      ">Architect</p>
     </li>
     <li>
       <img src="src/Quote.png" class="quote"/>
-      <p class="title">The details are not the details. They make the design.</p>
+      <p class="title" style="width: 203px;
+      height: 75px;
+      top: 325px;
+      left: 35px;">The details are not the details. They make the design.</p>
       <img src="src/winter.png" class="winter"/>
-      <p class="text">Alexandra Green</p>
-      <p class="text">Interior designer</p>
+      <p class="text" style="width: 138px;
+      height: 20px;
+      top: 419px;
+      left: 90px;
+      ">Alexandra Green</p>
+      <p class="text" style="width: 138px;
+      height: 15px;
+      top: 441px;
+      left: 90px;">Interior designer</p>
     </li>
     <li>
       <img src="src/Quote.png" class="quote"/>
-      <p class="title">Live life to the fullest, and focus on the positive</p>
+      <p class="title" style="width: 203px;
+      height: 75px;
+      top: 545px;
+      left: 35px;
+      ">Live life to the fullest, and focus on the positive</p>
       <img src="src/half.png" class="half"/>
-      <p class="text">Olivia Thompson</p>
-      <p class="text">Coacher</p>
+      <p class="text" style="width: 138px;
+      height: 20px;
+      top: 639px;
+      left: 90px;
+      ">Olivia Thompson</p>
+      <p class="text" style="width: 138px;
+      height: 15px;
+      top: 661px;
+      left: 90px;
+      ">Coacher</p>
     </li>
     <li>
-      <p class="text">Read more</p>
+      <p class="text" style="width: 68px;
+      height: 20px;
+      top: 736px;
+      left: 97px;
+      ">Read more</p>
     </li>
   </ul>
       </div>
