--- a/index.html
+++ b/index.html
@@ -270,11 +270,13 @@
       height: 20px;
       top: 199px;
       left: 90px;
+      color: #D1E2EB;
       ">David Williams</p>
       <p class="text" style="width: 138px;
       height: 15px;
       top: 221px;
       left: 90px;
+      color: #D1E2EB;
       ">Architect</p>
     </li>
     <li>
@@ -288,11 +290,13 @@
       height: 20px;
       top: 419px;
       left: 90px;
+      color: #D1E2EB;
       ">Alexandra Green</p>
       <p class="text" style="width: 138px;
       height: 15px;
       top: 441px;
-      left: 90px;">Interior designer</p>
+      left: 90px;
+      color: #D1E2EB;">Interior designer</p>
     </li>
     <li>
       <img src="src/Quote.png" class="quote"/>
@@ -306,11 +310,13 @@
       height: 20px;
       top: 639px;
       left: 90px;
+      color: #D1E2EB;
       ">Olivia Thompson</p>
       <p class="text" style="width: 138px;
       height: 15px;
       top: 661px;
       left: 90px;
+      color: #D1E2EB;
       ">Coacher</p>
     </li>
     <li>
