--- a/index.html
+++ b/index.html
@@ -325,6 +325,7 @@
       top: 736px;
       left: 97px;
       font-weight: bold;
+      white-space: nowrap;
       ">Read more</p>
     </li>
   </ul>
