--- a/index.html
+++ b/index.html
@@ -258,6 +258,7 @@
       height: 20px;
       top: 20px;
       left: 25px;
+      font-weight: bold;
       ">COLUMNS</p></li>
     <li>
       <img src="src/Quote.png" class="quote"/>
