--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
         font-weight: 700;
         line-height: 30px;
         text-align: left;"
-        class="tdtitle">The joy of replicas: A $ 5 million car for $ 50,000</p>
+        class="tdtitle">The joy of replicas: A $ 5 million car <br>for $ 50,000</p>
         <p class="tdtext" style="width: 228px;
         height: 80px;
         top: 185px;
