--- a/index.html
+++ b/index.html
@@ -281,7 +281,8 @@
       ">Architect</p>
     </li>
     <li>
-      <img src="src/Quote.png" class="quote"/>
+      <img src="src/Quote.png" class="quote" style="
+        top: 315px;"/>
       <p class="title" style="width: 203px;
       height: 75px;
       top: 325px;
@@ -300,7 +301,8 @@
       color: #D1E2EB;">Interior designer</p>
     </li>
     <li>
-      <img src="src/Quote.png" class="quote"/>
+      <img src="src/Quote.png" class="quote" style="
+        top: 535px;"/>
       <p class="title" style="width: 203px;
       height: 75px;
       top: 545px;
