--- a/index.html
+++ b/index.html
@@ -254,13 +254,13 @@
     </tr>
   </table>
   <ul class="blacklist">
-    <li><p class="text" style="width: 213px;
+    <li style="height: 59px;"><p class="text" style="width: 213px;
       height: 20px;
       top: 20px;
       left: 25px;
       font-weight: bold;
       ">COLUMNS</p></li>
-    <li>
+    <li style="height: 219px;">
       <img src="src/Quote.png" class="quote"/>
       <p class="title" style="width: 203px;
       height: 75px;
@@ -280,7 +280,7 @@
       color: #D1E2EB;
       ">Architect</p>
     </li>
-    <li>
+    <li style="height: 219px;">
       <img src="src/Quote.png" class="quote" style="
         top: 315px;"/>
       <p class="title" style="width: 203px;
@@ -300,7 +300,7 @@
       left: 90px;
       color: #D1E2EB;">Interior designer</p>
     </li>
-    <li>
+    <li style="height: 224px;">
       <img src="src/Quote.png" class="quote" style="
         top: 535px;"/>
       <p class="title" style="width: 203px;
