--- a/index.html
+++ b/index.html
@@ -260,7 +260,8 @@
       left: 25px;
       font-weight: bold;
       ">COLUMNS</p></li>
-    <li style="height: 219px;">
+    <li style="height: 219px; width: 213px;
+    margin-left: 20px;" >
       <img src="src/Quote.png" class="quote"/>
       <p class="title" style="width: 203px;
       height: 75px;
@@ -280,7 +281,8 @@
       color: #D1E2EB;
       ">Architect</p>
     </li>
-    <li style="height: 219px;">
+    <li style="height: 219px; width: 213px;
+    margin-left: 20px;">
       <img src="src/Quote.png" class="quote" style="
         top: 315px;"/>
       <p class="title" style="width: 203px;
@@ -300,7 +302,8 @@
       left: 90px;
       color: #D1E2EB;">Interior designer</p>
     </li>
-    <li style="height: 224px;">
+    <li style="height: 224px; width: 213px;
+    margin-left: 20px;">
       <img src="src/Quote.png" class="quote" style="
         top: 535px;"/>
       <p class="title" style="width: 203px;
