--- a/index.html
+++ b/index.html
@@ -302,8 +302,7 @@
       left: 90px;
       color: #D1E2EB;">Interior designer</p>
     </li>
-    <li style="height: 224px; width: 213px;
-    margin-left: 20px;">
+    <li style="height: 224px;">
       <img src="src/Quote.png" class="quote" style="
         top: 535px;"/>
       <p class="title" style="width: 203px;
@@ -325,7 +324,7 @@
       color: #D1E2EB;
       ">Coacher</p>
     </li>
-    <li>
+    <li style="border-bottom: none;">
       <p class="text" style="width: 68px;
       height: 20px;
       top: 736px;
